--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mi-api",
+  "name": "api-enviar-cesta",
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "pg": "^8.10.0"
+    "cors": "^2.8.5",
+    "pg": "^8.11.0"
   }
 }
